feat: add DELETE /tasks/:id/recurrences to bulk-delete all recurring instances
